Bootstrapped index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html ng-app="MyHelloWorldApp">
+<html>
 	<head>
+		<!-- Bootstrap CDN -->
+		<link rel="stylesheet" href="https:////maxcdn.bootstrapcdn.com/bootswatch/3.3.2/superhero/bootstrap.min.css">
+		<link rel="stylesheet" href="css/style.css">
+		<!-- Bootstrap js CDN, Angular and custom js file -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="js/firstController.js"></script>
 	</head>
 	<body>
-		<div ng-controller="HelloController">
-			<input type="text" ng-model="message" />
-			<span>{{message}}</span>
-		</body>
-	</html>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4 page-header">
+					<h1>Welcome!</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h3 class="panel-title">Please sign in</h3>
+						</div>
+						<div class="panel-body">
+							<form accept-charset="UTF-8" role="form">
+								<fieldset>
+									<div class="form-group">
+										<input class="form-control" placeholder="Username" name="username" type="text">
+									</div>
+									<input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+								</fieldset>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
