--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		<script src="../bower_components/angular/angular.js"></script>
 		<script src="js/firstController.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
