--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,26 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 	<head>
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/superhero/bootstrap.min.css">
 		<!--
-			<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
+		<script src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
+		<script src="../bower_components/angular/angular.js"></script>
 		-->
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Bootstrap js CDN, Angular and custom js file -->
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
-		<script src="../bower_components/angular/angular.js"></script>
-		<script src="js/firstController.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.min.js"></script>
+		<script type="text/javascript" src="js/socket.io.min.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/factory.js"></script>
 	</head>
-	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4 page-header">
-					<h1>Welcome!</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h3 class="panel-title">Please sign in</h3>
-						</div>
-						<div class="panel-body">
-							<form accept-charset="UTF-8" role="form">
-								<fieldset>
-									<div class="form-group">
-										<input class="form-control" placeholder="Username" name="username" type="text" ng-model="name">
-									</div>
-									<input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
-									<h3>Your name is now: {{name}}</h3>
-								</fieldset>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
+	<body ng-app="RuChat">
+		<div class="container view" ng-view>
+			<p>Loading...</p>
 		</div>
+		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	</body>
 </html>
