--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 	</head>
 	<body ng-app="RuChat">
 		<div class="container view" ng-view>
-			<p>Loading...</p>
+			<h1>Loading...</h1>
 		</div>
 		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
