--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<!-- Bootstrap CDN -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/superhero/bootstrap.min.css">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
 		<!--
 		<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
 		<script src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
