--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- Bootstrap CDN -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/superhero/bootstrap.min.css">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-		<!--
+		<!-- CSS -->
 		<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
-		<script src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
-		<script src="../bower_components/angular/angular.js"></script>
-		-->
 		<link rel="stylesheet" href="css/style.css">
-		<!-- Bootstrap js CDN, Angular and custom js file -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.min.js"></script>
+
+		<!-- JS -->
+		<script type="text/javascript" src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+		<script type="text/javascript" src="../bower_components/angular-route/angular-route.min.js"></script>
 		<script type="text/javascript" src="js/socket.io.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/factory.js"></script>
+		<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
+
 	</head>
 	<body ng-app="RuChat">
+		
 		<div class="container view" ng-view>
 			<h1>Loading...</h1>
 		</div>
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		
 	</body>
 </html>
