--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/socket.io.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/factory.js"></script>
+		<script type="text/javascript" src="../dist/js/app.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
