--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="../bower_components/angular-route/angular-route.min.js"></script>
+		<script type="text/javascript" src="../bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 		<script type="text/javascript" src="js/socket.io.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/factory.js"></script>
