--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,11 @@
 <html>
 	<head>
 		<!-- JS -->
-		<script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="../bower_components/bootswatch-dist/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+		<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 		<script type="text/javascript" src="../bower_components/angular-route/angular-route.min.js"></script>
 		<script type="text/javascript" src="../bower_components/angular-scroll-glue/src/scrollglue.js"></script>
 		<script type="text/javascript" src="js/socket.io.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/factory.js"></script>
 		<script type="text/javascript" src="../dist/js/app.js"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" href="../bower_components/bootswatch-dist/css/bootstrap.min.css">
