Userlist in each room now working

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body ng-app="RuChat">
 		
-		<div class="container view" ng-view>
+		<div class="container-fluid view" ng-view>
 			<h1>Loading...</h1>
 		</div>
 	</body>
