Cleaned up css and rooms.html.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,11 @@
 	<body ng-app="RuChat">
 		
 		<div class="container-fluid view" ng-view>
-			<h1>Loading...</h1>
+			<div class="row">
+				<div class="col-md-12">		
+					<h1>Loading...</h1>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
